PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46107 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin.html
@@ -1,5 +1,5 @@
    
-<div class="row-fluid">
+<div class="row">
     <div class="span7">
         <form class="form" method="post" name="generate" >               
              <div class="well">		 		
@@ -62,13 +62,17 @@
         </form>		 		
     </div>		 		
     <div class="span4" >       
-        <div class="portlet-background-header -lutece-border-radius-top">#i18n{pluginwizard.pluginwizard_create_plugin.labelInformation}
-        </div>       
-
-
-        <ul><li><img src="images/local/skin/buttons/show.png">#i18n{pluginwizard.pluginwizard_create_plugin_application.labelCreationStep}</li><li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelDescriptionStep}</li><li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelFeaturesStep}</li><li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelBusinessStep}</li><li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelXPageStep}</li><li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelPortletsStep}</li><li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelGenerateStep}</li>       
+        <ul class="unstyled" >
+            <li class="label label-info"><h5> &nbsp; &nbsp;#i18n{pluginwizard.pluginwizard_create_plugin_application.labelCreationStep}</h5></li>
+            <li class="muted"><h5> &nbsp; &nbsp;#i18n{pluginwizard.pluginwizard_create_plugin_application.labelDescriptionStep}</h5></li>
+            <li class="muted"> &nbsp;#i18n{pluginwizard.pluginwizard_create_plugin_application.labelFeaturesStep}</li>
+            <li><h5> &nbsp; &nbsp;#i18n{pluginwizard.pluginwizard_create_plugin_application.labelBusinessStep}</h5></li>
+            <li><h5> &nbsp; &nbsp;#i18n{pluginwizard.pluginwizard_create_plugin_application.labelXPageStep}</h5></li>
+            <li><h5> &nbsp; &nbsp;#i18n{pluginwizard.pluginwizard_create_plugin_application.labelPortletsStep}</h5></li>
+            <li><h5> &nbsp; &nbsp;#i18n{pluginwizard.pluginwizard_create_plugin_application.labelGenerateStep}</h5></li>       
         </ul>        
-        <div class="portlet-background-content">       #i18n{pluginwizard.pluginwizard_create_plugin.pageHelp}
+        <div class="portlet-background-content">#i18n{pluginwizard.pluginwizard_create_plugin.pageHelp}
         </div>
     </div>
 </div>
+
